# bazel-golang-hello-world

./: README.md  WORKSPACE
hello/: BUILD.bazel  hello.go  main.go
