load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
  name = "hello_lib",
  srcs = [
    "hello.go",
  ],
  importpath = "github.com/si-you/bazel-golang-hello-world/hello",
)

go_binary(
  name = "hello",
  srcs = ["main.go"],
  deps = [
    ":hello_lib",
  ],
  importpath = "github.com/si-you/bazel-golang-hello-world/hello",
)

go_image(
  name = "hello_image",
  srcs = ["main.go"],
  deps = [
    ":hello_lib",
  ],
  importpath = "github.com/si-you/bazel-golang-hello-world/hello",
)
